--- a/index.html
+++ b/index.html
@@ -84,15 +84,15 @@
                         <details class="recipe-button">
                             <summary class="right">Recipe</summary>
                             <div class="recipe_details">
-                                <p class="recipe-text">
-                                <ul class="ingredients">
+                                <div class="recipe-text">
+                                    <ul class="ingredients">
                                     <li>50 ml Rye whiskey</li>
                                     <li>20 ml Sweet red vermouth</li>
                                     <li>1 dash Angostura bitters</li>
-                                </ul>
+                                    </ul>
                                 Pour all ingredients into mixing glass with ice cubes. Stir well. Strain into a chilled
                                 cocktail glass.
-                                </p>
+                                </div>
                             </div>
                         </details>
                     </div>
@@ -115,14 +115,14 @@
                         <details class="recipe-button">
                             <summary class="right">Recipe</summary>
                             <div class="recipe_details">
-                                <p class="recipe-text">
+                                <div class="recipe-text">
                                 <ul class="ingredients">
                                     <li>90 ml Prosecco</li>
                                     <li>60 ml Select/Aperol/Campari/Cynar</li>
                                     <li>Splash of soda water</li>
                                 </ul>
                                 Build all ingredients into a wine glass filled with ice. Stir gently.
-                                </p>
+                                </div>
                             </div>
                         </details>
                     </div>
@@ -148,7 +148,7 @@
                         <details class="recipe-button">
                             <summary class="right">Recipe</summary>
                             <div class="recipe_details">
-                                <p class="recipe-text">
+                                <div class="recipe-text">
                                 <ul class="ingredients">
                                     <li>40 ml Vodka Citron</li>
                                     <li>15 ml Cointreau</li>
@@ -157,7 +157,7 @@
                                 </ul>
                                 Shake all ingredients in cocktail shaker filled with ice.
                                 Strain into a large cocktail glass. Garnish with lime slice.
-                                </p>
+                                </div>
                             </div>
                         </details>
                     </div>
@@ -180,7 +180,7 @@
                         <details class="recipe-button">
                             <summary class="right">Recipe</summary>
                             <div class="recipe_details">
-                                <p class="recipe-text">
+                                <div class="recipe-text">
                                 <ul class="ingredients">
                                     <li>75 ml Vodka or Gin.</li>
                                     <li>15 ml Vermouth.</li>
@@ -189,7 +189,7 @@
                                 </ul>
                                 Pour all ingredients into mixing glass with ice cubes. Stir well. Strain into chilled
                                 martini cocktail glass.
-                                </p>
+                                </div>
                             </div>
                         </details>
                     </div>
@@ -213,7 +213,7 @@
                         <details class="recipe-button">
                             <summary class="right">Recipe</summary>
                             <div class="recipe_details">
-                                <p class="recipe-text">
+                                <div class="recipe-text">
                                 <ul class="ingredients">
                                     <li>60 ml white Cuban rum</li>
                                     <li>20 ml fresh lime juice</li>
@@ -221,7 +221,7 @@
                                 </ul>
                                 In a cocktail shaker add all ingredients. Stir well to dissolve the sugar. Add ice and
                                 shake. Strain into chilled cocktail glass.
-                                </p>
+                                </div>
                             </div>
                         </details>
                     </div>
@@ -244,7 +244,7 @@
                         <details class="recipe-button">
                             <summary class="right">Recipe</summary>
                             <div class="recipe_details">
-                                <p class="recipe-text">
+                                <div class="recipe-text">
                                 <ul class="ingredients">
                                     <li> 50 ml Vodka</li>
                                     <li> 30 ml Kahlúa</li>
@@ -254,7 +254,7 @@
                                 Pour all ingredients into cocktail shaker, shake well with ice, strain into chilled
                                 cocktail
                                 glass.
-                                </p>
+                                </div>
                             </div>
                         </details>
                     </div>
@@ -278,7 +278,7 @@
                         <details class="recipe-button">
                             <summary class="right">Recipe</summary>
                             <div class="recipe_details">
-                                <p class="recipe-text">
+                                <div class="recipe-text">
                                 <ul class="ingredients">
                                     <li> 30 ml amber Jamaican rum</li>
                                     <li> 30 ml Martinique molasses rhum</li>
@@ -290,7 +290,7 @@
                                 Add all ingredients into a shaker with ice. Shake and pour into a double rocks glass or
                                 a
                                 highball glass.
-                                </p>
+                            </div>
                             </div>
                         </details>
                     </div>
@@ -314,7 +314,7 @@
                         <details class="recipe-button">
                             <summary class="right">Recipe</summary>
                             <div class="recipe_details">
-                                <p class="recipe-text">
+                                <div class="recipe-text">
                                 <ul class="ingredients">
                                     <li> 45 ml white Rum</li>
                                     <li> 20 ml fresh lime juice</li>
@@ -325,7 +325,7 @@
                                 Mix mint sprigs with sugar and lime juice. Add splash of soda water and fill the glass
                                 with
                                 ice. Pour the rum and top with soda water. Light stir to involve all ingredients.
-                                </p>
+                                </div>
                             </div>
                         </details>
                     </div>
@@ -348,7 +348,7 @@
                         <details class="recipe-button">
                             <summary class="right">Recipe</summary>
                             <div class="recipe_details">
-                                <p class="recipe-text">
+                                <div class="recipe-text">
                                 <ul class="ingredients">
                                     <li> 50 ml Tequila (100% agave)</li>
                                     <li> 20 ml Triple sec </li>
@@ -356,7 +356,7 @@
                                 </ul>
                                 Add all ingredients into a shaker with ice. Shake and strain into a chilled cocktail
                                 glass.
-                                </p>
+                                </div>
                             </div>
                         </details>
                     </div>
@@ -380,14 +380,14 @@
                         <details class="recipe-button">
                             <summary class="right">Recipe</summary>
                             <div class="recipe_details">
-                                <p class="recipe-text">
+                                <div class="recipe-text">
                                 <ul class="ingredients">
                                     <li> 30 ml Gin </li>
                                     <li> 30 ml sweet red vermouth</li>
                                     <li> 30 ml Campari</li>
                                 </ul>
                                 Build in glass over ice, garnish and serve.
-                                </p>
+                                </div>
                             </div>
                         </details>
                     </div>
@@ -410,7 +410,7 @@
                         <details class="recipe-button">
                             <summary class="right">Recipe</summary>
                             <div class="recipe_details">
-                                <p class="recipe-text">
+                                <div class="recipe-text">
                                 <ul class="ingredients">
                                     <li> 45 ml Bourbon or rye Whiskey </li>
                                     <li> 1 sugar cube</li>
@@ -422,7 +422,7 @@
                                 water. Muddle until dissolved. Fill the glass with ice cubes and add whiskey. Stir
                                 gently.
                                 Garnish with orange slice or zest, and a cocktail cherry.
-                                </p>
+                                </div>
                             </div>
                         </details>
                     </div>
@@ -433,19 +433,19 @@
     <footer>
         <div class="social-button">
             <a href="./404.html">
-                <img src="assets/img/icon/icon_facebook.png">
+                <img src="assets/img/icon/icon_facebook.png" alt="facebook link">
             </a>
             <a href="./404.html">
-                <img src="assets/img/icon/icon_instagram.png">
+                <img src="assets/img/icon/icon_instagram.png" alt="instagram link">
             </a>
             <a href="./404.html">
-                <img src="assets/img/icon/icon_linkedin.png">
+                <img src="assets/img/icon/icon_linkedin.png" alt="linkedin link">
             </a>
             <a href="./404.html">
-                <img src="assets/img/icon/icon_twitter.png">
+                <img src="assets/img/icon/icon_twitter.png" alt="twitter link">
             </a>
             <a href="./404.html">
-                <img src="assets/img/icon/icon_youtube.png">
+                <img src="assets/img/icon/icon_youtube.png" alt="youtube link">
             </a>
         </div>
     </footer>
