--- a/contact.html
+++ b/contact.html
@@ -40,8 +40,8 @@
             <div class="contact-section"> 
                 <h1 class="title-section center">Contact us</h1> 
                 <div class="contact-form">
-                    <table>
                     <form action="./post.html" method="post" > 
+                    <table>
                     <tr>
                         <td>
                             <label for="f_name">First Name:</label></td>
@@ -88,8 +88,8 @@
                             <input type="submit" class="submit-button">
                         </td>
                     </tr>
-                    </form>
                 </table>
+            </form>
                 </div>
                 </div>
         </div>
@@ -97,25 +97,22 @@
     <footer>
         <div class="social-button">
             <a href="./404.html">
-                <img src="assets/img/icon/icon_facebook.png">
+                <img src="assets/img/icon/icon_facebook.png" alt="facebook link">
             </a>
             <a href="./404.html">
-                <img src="assets/img/icon/icon_instagram.png">
+                <img src="assets/img/icon/icon_instagram.png" alt="instagram link">
             </a>
             <a href="./404.html">
-                <img src="assets/img/icon/icon_linkedin.png">
+                <img src="assets/img/icon/icon_linkedin.png" alt="linkedin link">
             </a>
             <a href="./404.html">
-                <img src="assets/img/icon/icon_twitter.png">
+                <img src="assets/img/icon/icon_twitter.png" alt="twitter link">
             </a>
             <a href="./404.html">
-                <img src="assets/img/icon/icon_youtube.png">
+                <img src="assets/img/icon/icon_youtube.png" alt="youtube link">
             </a>
         </div>
     </footer>
 </body>
 
-</html>
-</body>
-
-</html>
+</html> 
