--- a/post.html
+++ b/post.html
@@ -36,7 +36,7 @@
         </div>
     </header>
     <section>
-
+        <h2 class="center">Request accepted</h2>
         <div class="main-section">
             <div class="error-section">
                 <div class="page404-description">
@@ -57,25 +57,22 @@
     <footer>
         <div class="social-button">
             <a href="./404.html">
-                <img src="assets/img/icon/icon_facebook.png">
+                <img src="assets/img/icon/icon_facebook.png" alt="facebook link">
             </a>
             <a href="./404.html">
-                <img src="assets/img/icon/icon_instagram.png">
+                <img src="assets/img/icon/icon_instagram.png" alt="instagram link">
             </a>
             <a href="./404.html">
-                <img src="assets/img/icon/icon_linkedin.png">
+                <img src="assets/img/icon/icon_linkedin.png" alt="linkedin link">
             </a>
             <a href="./404.html">
-                <img src="assets/img/icon/icon_twitter.png">
+                <img src="assets/img/icon/icon_twitter.png" alt="twitter link">
             </a>
             <a href="./404.html">
-                <img src="assets/img/icon/icon_youtube.png">
+                <img src="assets/img/icon/icon_youtube.png" alt="youtube link">
             </a>
         </div>
     </footer>
-</body>
-
-</html>
 </body>
 
 </html>
