change button form

--- a/contact.html
+++ b/contact.html
@@ -82,10 +82,10 @@
                     </tr> 
                     <tr class="sub-btn">
                         <td>
-                            <input type="reset" class="reset-button">
+                            <input type="reset" class="reset-button" value="Clear">
                         </td>
                         <td>
-                            <input type="submit" class="submit-button">
+                            <input type="submit" class="submit-button" value="Send recipe">
                         </td>
                     </tr>
                 </table>
