add favicon and fix some

--- a/404.html
+++ b/404.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="./assets/img/favicon_io/site.webmanifest">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Italianno&display=swap"
         rel="stylesheet">
@@ -40,7 +44,7 @@
         <div class="main-section">
             <div class="error-section">
                 <div class="page404-description">
-                    
+
                     <div class="page404-text center">
                         Oops...
                     </div>
@@ -49,13 +53,14 @@
                     </div>
                     <div class="page404-text center">
                         Page Not Found.
-                       
-                   <p> Go to <a href="./index.html">Home page</a></p>
+
+                        <p> Go to <a href="./index.html">Home page</a></p>
                     </div>
                 </div>
                 <div class="error-pict">
                     <div class="pixel">
-                    <img src="./assets/img/404page_pic.jpeg" alt="404 not found"></div>
+                        <img src="./assets/img/404page_pic.jpeg" alt="404 not found">
+                    </div>
                 </div>
             </div>
         </div>
@@ -79,5 +84,6 @@
             </a>
         </div>
     </footer>
-</body> 
+</body>
+
 </html>
