--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="./assets/img/favicon_io/site.webmanifest">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Italianno&display=swap"
         rel="stylesheet">
@@ -36,62 +40,68 @@
         </div>
     </header>
     <section>
-        <div class="main-section"> 
-            <div class="contact-section"> 
-                <h1 class="title-section center">Contact us</h1> 
+        <div class="main-section">
+            <div class="contact-section">
+                <h1 class="title-section center">Contact us</h1>
                 <div class="contact-form">
-                    <form action="./post.html" method="post" > 
-                    <table>
-                    <tr>
-                        <td>
-                            <label for="f_name">First Name:</label></td>
-                        <td>
-                            <input type="text" name="first_name" id="f_name" required minlength="2" maxlength="20">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <label for="s_name">Second Name:</label></td>
-                        <td>
-                            <input type="text" name="second_name" id="s_name" required minlength="2" maxlength="20">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <label for="email">Your Email:</label>
-                        </td>
-                        <td>
-                            <input type="email" name="email" id="email" required>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <label for="phone">Your Phone number:</label>
-                        </td>
-                        <td>
-                            <input type="tel" name="phone_num" id="phone" required  pattern="[0-9]{10}" placeholder="087-012-34-56" maxlength="10">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <label for="recipe">Your recipe:</label>
-                        </td>
-                        <td>
-                            <textarea id="recipe" name="recipe" rows="6" cols="40" placeholder="Enter your recipe..." minlength="25" required></textarea>
-                        </td>
-                    </tr> 
-                    <tr class="sub-btn">
-                        <td>
-                            <input type="reset" class="reset-button" value="Clear">
-                        </td>
-                        <td>
-                            <input type="submit" class="submit-button" value="Send recipe">
-                        </td>
-                    </tr>
-                </table>
-            </form>
+                    <form action="./post.html" method="post">
+                        <table>
+                            <tr>
+                                <td>
+                                    <label for="f_name">First Name:</label>
+                                </td>
+                                <td>
+                                    <input type="text" name="first_name" id="f_name" required minlength="2"
+                                        maxlength="20">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <label for="s_name">Second Name:</label>
+                                </td>
+                                <td>
+                                    <input type="text" name="second_name" id="s_name" required minlength="2"
+                                        maxlength="20">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <label for="email">Your Email:</label>
+                                </td>
+                                <td>
+                                    <input type="email" name="email" id="email" required>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <label for="phone">Your Phone number:</label>
+                                </td>
+                                <td>
+                                    <input type="tel" name="phone_num" id="phone" required pattern="[0-9]{10}"
+                                        placeholder="087-012-34-56" maxlength="10">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <label for="recipe">Your recipe:</label>
+                                </td>
+                                <td>
+                                    <textarea id="recipe" name="recipe" rows="6" cols="40"
+                                        placeholder="Enter your recipe..." minlength="25" required></textarea>
+                                </td>
+                            </tr>
+                            <tr class="sub-btn">
+                                <td>
+                                    <input type="reset" class="reset-button" value="Clear">
+                                </td>
+                                <td>
+                                    <input type="submit" class="submit-button" value="Send recipe">
+                                </td>
+                            </tr>
+                        </table>
+                    </form>
                 </div>
-                </div>
+            </div>
         </div>
     </section>
     <footer>
@@ -115,4 +125,4 @@
     </footer>
 </body>
 
-</html> 
+</html>
