--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="./assets/img/favicon_io/site.webmanifest">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Italianno&display=swap"
         rel="stylesheet">
@@ -43,7 +47,7 @@
     <div class="carousel">
         <div class="sliders">
             <div class="quote" id="q1">
-                <p class="text-quote">Do you drink?”. “Of course, I just said I was a writer.”</p>
+                <p class="text-quote">Do you drink?. “Of course, I just said I was a writer.”</p>
                 <p class="author-quote">- Stephen King</p>
             </div>
             <div class="quote" id="q2">
@@ -86,12 +90,13 @@
                             <div class="recipe_details">
                                 <div class="recipe-text">
                                     <ul class="ingredients">
-                                    <li>50 ml Rye whiskey</li>
-                                    <li>20 ml Sweet red vermouth</li>
-                                    <li>1 dash Angostura bitters</li>
+                                        <li>50 ml Rye whiskey</li>
+                                        <li>20 ml Sweet red vermouth</li>
+                                        <li>1 dash Angostura bitters</li>
                                     </ul>
-                                Pour all ingredients into mixing glass with ice cubes. Stir well. Strain into a chilled
-                                cocktail glass.
+                                    Pour all ingredients into mixing glass with ice cubes. Stir well. Strain into a
+                                    chilled
+                                    cocktail glass.
                                 </div>
                             </div>
                         </details>
@@ -116,12 +121,12 @@
                             <summary class="right">Recipe</summary>
                             <div class="recipe_details">
                                 <div class="recipe-text">
-                                <ul class="ingredients">
-                                    <li>90 ml Prosecco</li>
-                                    <li>60 ml Select/Aperol/Campari/Cynar</li>
-                                    <li>Splash of soda water</li>
-                                </ul>
-                                Build all ingredients into a wine glass filled with ice. Stir gently.
+                                    <ul class="ingredients">
+                                        <li>90 ml Prosecco</li>
+                                        <li>60 ml Select/Aperol/Campari/Cynar</li>
+                                        <li>Splash of soda water</li>
+                                    </ul>
+                                    Build all ingredients into a wine glass filled with ice. Stir gently.
                                 </div>
                             </div>
                         </details>
@@ -149,14 +154,14 @@
                             <summary class="right">Recipe</summary>
                             <div class="recipe_details">
                                 <div class="recipe-text">
-                                <ul class="ingredients">
-                                    <li>40 ml Vodka Citron</li>
-                                    <li>15 ml Cointreau</li>
-                                    <li>15 ml Fresh lime juice</li>
-                                    <li>30 ml cranberry juice</li>
-                                </ul>
-                                Shake all ingredients in cocktail shaker filled with ice.
-                                Strain into a large cocktail glass. Garnish with lime slice.
+                                    <ul class="ingredients">
+                                        <li>40 ml Vodka Citron</li>
+                                        <li>15 ml Cointreau</li>
+                                        <li>15 ml Fresh lime juice</li>
+                                        <li>30 ml cranberry juice</li>
+                                    </ul>
+                                    Shake all ingredients in cocktail shaker filled with ice.
+                                    Strain into a large cocktail glass. Garnish with lime slice.
                                 </div>
                             </div>
                         </details>
@@ -181,14 +186,15 @@
                             <summary class="right">Recipe</summary>
                             <div class="recipe_details">
                                 <div class="recipe-text">
-                                <ul class="ingredients">
-                                    <li>75 ml Vodka or Gin.</li>
-                                    <li>15 ml Vermouth.</li>
-                                    <li>15 ml Olive juice (brine solution from a jar of cocktail olives).</li>
-                                    <li>Cocktail olives (one or two)</li>
-                                </ul>
-                                Pour all ingredients into mixing glass with ice cubes. Stir well. Strain into chilled
-                                martini cocktail glass.
+                                    <ul class="ingredients">
+                                        <li>75 ml Vodka or Gin.</li>
+                                        <li>15 ml Vermouth.</li>
+                                        <li>15 ml Olive juice (brine solution from a jar of cocktail olives).</li>
+                                        <li>Cocktail olives (one or two)</li>
+                                    </ul>
+                                    Pour all ingredients into mixing glass with ice cubes. Stir well. Strain into
+                                    chilled
+                                    martini cocktail glass.
                                 </div>
                             </div>
                         </details>
@@ -214,13 +220,14 @@
                             <summary class="right">Recipe</summary>
                             <div class="recipe_details">
                                 <div class="recipe-text">
-                                <ul class="ingredients">
-                                    <li>60 ml white Cuban rum</li>
-                                    <li>20 ml fresh lime juice</li>
-                                    <li>2 bar spoons superfine sugar</li>
-                                </ul>
-                                In a cocktail shaker add all ingredients. Stir well to dissolve the sugar. Add ice and
-                                shake. Strain into chilled cocktail glass.
+                                    <ul class="ingredients">
+                                        <li>60 ml white Cuban rum</li>
+                                        <li>20 ml fresh lime juice</li>
+                                        <li>2 bar spoons superfine sugar</li>
+                                    </ul>
+                                    In a cocktail shaker add all ingredients. Stir well to dissolve the sugar. Add ice
+                                    and
+                                    shake. Strain into chilled cocktail glass.
                                 </div>
                             </div>
                         </details>
@@ -245,15 +252,15 @@
                             <summary class="right">Recipe</summary>
                             <div class="recipe_details">
                                 <div class="recipe-text">
-                                <ul class="ingredients">
-                                    <li> 50 ml Vodka</li>
-                                    <li> 30 ml Kahlúa</li>
-                                    <li> 10 ml sugar syrup</li>
-                                    <li> 1 strong espresso</li>
-                                </ul>
-                                Pour all ingredients into cocktail shaker, shake well with ice, strain into chilled
-                                cocktail
-                                glass.
+                                    <ul class="ingredients">
+                                        <li> 50 ml Vodka</li>
+                                        <li> 30 ml Kahlúa</li>
+                                        <li> 10 ml sugar syrup</li>
+                                        <li> 1 strong espresso</li>
+                                    </ul>
+                                    Pour all ingredients into cocktail shaker, shake well with ice, strain into chilled
+                                    cocktail
+                                    glass.
                                 </div>
                             </div>
                         </details>
@@ -279,18 +286,19 @@
                             <summary class="right">Recipe</summary>
                             <div class="recipe_details">
                                 <div class="recipe-text">
-                                <ul class="ingredients">
-                                    <li> 30 ml amber Jamaican rum</li>
-                                    <li> 30 ml Martinique molasses rhum</li>
-                                    <li> 15 ml orange curacao</li>
-                                    <li> 15 ml orgeat syrup (almond)</li>
-                                    <li> 30 ml fresh lime juice</li>
-                                    <li> 7.5 ml simple syrup</li>
-                                </ul>
-                                Add all ingredients into a shaker with ice. Shake and pour into a double rocks glass or
-                                a
-                                highball glass.
-                            </div>
+                                    <ul class="ingredients">
+                                        <li> 30 ml amber Jamaican rum</li>
+                                        <li> 30 ml Martinique molasses rhum</li>
+                                        <li> 15 ml orange curacao</li>
+                                        <li> 15 ml orgeat syrup (almond)</li>
+                                        <li> 30 ml fresh lime juice</li>
+                                        <li> 7.5 ml simple syrup</li>
+                                    </ul>
+                                    Add all ingredients into a shaker with ice. Shake and pour into a double rocks glass
+                                    or
+                                    a
+                                    highball glass.
+                                </div>
                             </div>
                         </details>
                     </div>
@@ -315,16 +323,17 @@
                             <summary class="right">Recipe</summary>
                             <div class="recipe_details">
                                 <div class="recipe-text">
-                                <ul class="ingredients">
-                                    <li> 45 ml white Rum</li>
-                                    <li> 20 ml fresh lime juice</li>
-                                    <li> 6 sprigs of mint</li>
-                                    <li> 2 teaspoons white cane sugar (or 2 cl of sugar syrup)</li>
-                                    <li> Soda water</li>
-                                </ul>
-                                Mix mint sprigs with sugar and lime juice. Add splash of soda water and fill the glass
-                                with
-                                ice. Pour the rum and top with soda water. Light stir to involve all ingredients.
+                                    <ul class="ingredients">
+                                        <li> 45 ml white Rum</li>
+                                        <li> 20 ml fresh lime juice</li>
+                                        <li> 6 sprigs of mint</li>
+                                        <li> 2 teaspoons white cane sugar (or 2 cl of sugar syrup)</li>
+                                        <li> Soda water</li>
+                                    </ul>
+                                    Mix mint sprigs with sugar and lime juice. Add splash of soda water and fill the
+                                    glass
+                                    with
+                                    ice. Pour the rum and top with soda water. Light stir to involve all ingredients.
                                 </div>
                             </div>
                         </details>
@@ -349,13 +358,13 @@
                             <summary class="right">Recipe</summary>
                             <div class="recipe_details">
                                 <div class="recipe-text">
-                                <ul class="ingredients">
-                                    <li> 50 ml Tequila (100% agave)</li>
-                                    <li> 20 ml Triple sec </li>
-                                    <li> 15 ml Freshly squeezed lime juice </li>
-                                </ul>
-                                Add all ingredients into a shaker with ice. Shake and strain into a chilled cocktail
-                                glass.
+                                    <ul class="ingredients">
+                                        <li> 50 ml Tequila (100% agave)</li>
+                                        <li> 20 ml Triple sec </li>
+                                        <li> 15 ml Freshly squeezed lime juice </li>
+                                    </ul>
+                                    Add all ingredients into a shaker with ice. Shake and strain into a chilled cocktail
+                                    glass.
                                 </div>
                             </div>
                         </details>
@@ -381,12 +390,12 @@
                             <summary class="right">Recipe</summary>
                             <div class="recipe_details">
                                 <div class="recipe-text">
-                                <ul class="ingredients">
-                                    <li> 30 ml Gin </li>
-                                    <li> 30 ml sweet red vermouth</li>
-                                    <li> 30 ml Campari</li>
-                                </ul>
-                                Build in glass over ice, garnish and serve.
+                                    <ul class="ingredients">
+                                        <li> 30 ml Gin </li>
+                                        <li> 30 ml sweet red vermouth</li>
+                                        <li> 30 ml Campari</li>
+                                    </ul>
+                                    Build in glass over ice, garnish and serve.
                                 </div>
                             </div>
                         </details>
@@ -411,17 +420,17 @@
                             <summary class="right">Recipe</summary>
                             <div class="recipe_details">
                                 <div class="recipe-text">
-                                <ul class="ingredients">
-                                    <li> 45 ml Bourbon or rye Whiskey </li>
-                                    <li> 1 sugar cube</li>
-                                    <li> Few dashes Angostura bitters </li>
-                                    <li> Few dashes plain water </li>
-                                </ul>
-                                Place sugar cube in old fashioned glass and saturate with bitter, add few dashes of
-                                plain
-                                water. Muddle until dissolved. Fill the glass with ice cubes and add whiskey. Stir
-                                gently.
-                                Garnish with orange slice or zest, and a cocktail cherry.
+                                    <ul class="ingredients">
+                                        <li> 45 ml Bourbon or rye Whiskey </li>
+                                        <li> 1 sugar cube</li>
+                                        <li> Few dashes Angostura bitters </li>
+                                        <li> Few dashes plain water </li>
+                                    </ul>
+                                    Place sugar cube in old fashioned glass and saturate with bitter, add few dashes of
+                                    plain
+                                    water. Muddle until dissolved. Fill the glass with ice cubes and add whiskey. Stir
+                                    gently.
+                                    Garnish with orange slice or zest, and a cocktail cherry.
                                 </div>
                             </div>
                         </details>
