--- a/about.html
+++ b/about.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="./assets/img/favicon_io/site.webmanifest">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Italianno&display=swap"
         rel="stylesheet">
@@ -55,7 +59,8 @@
                     a refreshing mojito to an exquisite martini, we have cocktails for every taste.
                 </p>
                 <p>
-                    Join our cocktail community, share your creations in the site section <a href="./contact.html">"Contact"</a> and take your mixing skills to
+                    Join our cocktail community, share your creations in the site section <a
+                        href="./contact.html">"Contact"</a> and take your mixing skills to
                     the next level.
                 </p>
                 <p class="about-text-end center">
@@ -84,4 +89,4 @@
     </footer>
 </body>
 
-</html> 
+</html>
